# lort

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  README.md
documents/: custom_sort.md
src/: error.rs  lib.rs  main.rs  parser.rs  sorter.rs  stdlib.rs
tests/: integration.rs
